fixes: brutta grafica quando l'utente in fase di registrazione deseleziona sia online che presenza; i messaggi di errore nella registrazione e nel login rimanevano visibili anche dopo aver aggiornato la pagina o cambiato pagina (rimanevano memorizzati in ), adesso non più.

--- a/style/form.css
+++ b/style/form.css
@@ -64,8 +64,13 @@
   justify-content: center;
 }
 
-#online_presenza_div {
+#online_presenza_div_container {
   display: none;
+  flex-direction: column;
+}
+
+#online_presenza_div {
+  display: flex;
   align-items: center;
   justify-content: center;
 }
